# finding-flagella

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
bash_scripts/: predict.sh  train.sh
py_files/: predict_model.py  train_model.py
tests/: test_predict_model.py  test_train_model.py
