[project]
name = "finding-flagella"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy==2.1.1",
    "pandas==2.2.3",
    "PyYAML==6.0.2",
    "tqdm==4.67.1",
    "ultralytics==8.3.97",
    "ultralytics-thop==2.0.14",
    "matplotlib==3.11.0",
    "Pillow==12.2.0",
]

[project.optional-dependencies]
dev = ["pytest"]
download = ["kaggle==1.7.4.2"]

[tool.pytest.ini_options]
pythonpath = ["py_files"]
testpaths = ["tests"]
